feat: add types for job data and profile analysis in extension
- Introduced new TypeScript types in `types.ts` for job data, parsed profiles, fit analysis, and extraction results.
- Created a `tsconfig.json` for TypeScript configuration in the extension.
- Updated `package.json` to modify the `seer` script for better environment handling.
- Enhanced CLI functionality in `index.ts` to support dry runs and profile exports.
- Improved fit analysis logic in `fit-analyzer.ts` to handle multiple models and rate limits.
- Updated dependencies in `pnpm-lock.yaml` for new packages and types.

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "build": "turbo build",
     "dev": "turbo dev",
-    "seer": "tsx packages/cli/src/index.ts"
+    "seer": "node --env-file=.env --import=tsx packages/cli/src/index.ts"
   },
   "devDependencies": {
     "turbo": "^2.4.0",
