--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -22,7 +22,7 @@ jobs:
             archive: tar.gz
             tectonic_asset: tectonic-0.15.0-aarch64-apple-darwin.tar.gz
             tectonic_binary: tectonic
-          - os: macos-13
+          - os: macos-14
             target: darwin-x64
             artifact: theseer-pdf-macos-x64
             archive: tar.gz
@@ -62,7 +62,7 @@ jobs:
         working-directory: apps/resume-gen
         shell: bash
         run: |
-          bun run build.ts --target ${{ matrix.target }}
+          bun run build.ts --target ${{ matrix.target }} --no-archive
           # Copy tectonic into the archive
           cp /tmp/tectonic-dl/${{ matrix.tectonic_binary }} dist/${{ matrix.artifact }}/${{ matrix.tectonic_binary }}
           # Re-package with tectonic included
