[bug] - build error & extension fix

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,6 +14,7 @@ env:
 jobs:
   build:
     strategy:
+      fail-fast: false
       matrix:
         include:
           - os: macos-14
@@ -38,7 +39,7 @@ jobs:
             target: linux-arm64
             artifact: theseer-pdf-linux-arm64
             archive: tar.gz
-            tectonic_asset: tectonic-0.15.0-aarch64-unknown-linux-gnu.tar.gz
+            tectonic_asset: tectonic-0.15.0-aarch64-unknown-linux-musl.tar.gz
             tectonic_binary: tectonic
           - os: windows-latest
             target: win-x64
