--- a/apps/extension/manifest.json
+++ b/apps/extension/manifest.json
@@ -24,7 +24,7 @@
     {
       "matches": ["<all_urls>"],
       "js": ["dist/content.js"],
-      "css": ["dist/content.css"],
+      "css": ["content.css"],
       "run_at": "document_end",
       "all_frames": false
     },
