[feat] redesign extension UI with Tailwind CSS
Replace inline CSS with Tailwind build pipeline in both popup and settings pages.
Settings page gets collapsible prompt accordions with dark-themed editor (tab key, variable chip insertion, indigo focus ring).
Popup gets refined layout with ring-style score circle, pill tags, and cleaner model bar.

--- a/apps/extension/package.json
+++ b/apps/extension/package.json
@@ -8,8 +8,10 @@
     "dev": "node build.mjs --watch"
   },
   "devDependencies": {
+    "@tailwindcss/cli": "^4.2.1",
     "@types/chrome": "^0.1.36",
     "esbuild": "^0.24.0",
+    "tailwindcss": "^4.2.1",
     "typescript": "^5.7.0"
   }
 }
